<resources>
    <string name="app_name">IU Supervisor-App</string>
    <string name="login">Sign in</string>
    <string name="logout">Sing out</string>
    <string name="logout_content_description">Sing out as current user</string>
    <string name="hello">Hello</string>
    <string name="logged_in_as">Signed in as</string>
    <string name="logged_out">Signed out</string>
    <string name="iu_name">INTERNATIONAL UNIVERSITY</string>
    <string name="welcome_message">Welcome to \n IU Supervisor-App</string>
    <string name="welcome_message_login">Please sign in to proceed</string>
    <string name="supervisor_board_title">Supervisor-Board</string>
    <string name="filter">Filter</string>
    <string name="hi_user_label">Hi, </string>
    <string name="hi_user_string_placeholder">%s</string>
    <string name="string_placeholder">%s</string>
    <string name="to_topic_board">Go to Topic-Board →</string>
    <string name="thesis_request_button_text">Start thesis request</string>
    <string name="back_button">Go back</string>
    <string name="email_string_placeholder">E-Mail: %s</string>
    <string name="topic_categories_label">Topic categories</string>
    <string name="thesis_request_submit_button_text">Submit thesis request</string>
    <string name="student_name_string_placeholder">Student: %s</string>
    <string name="supervisor_name_string_placeholder">Supervisor: %s</string>
    <string name="student_study_program_string_placeholder">Study program: %s</string>
    <string name="expose_filepath_placeholder">File: [empty]</string>
    <string name="thesis_submit_form_title">Thesis request form</string>
    <string name="expose_label">Exposé</string>
    <string name="thesis_title_label">Thesis title</string>
    <string name="supervisor_description_string_placeholder">Description: %s</string>
    <string name="topic_string_placeholder">Topic: %s</string>
    <string name="topic_board_title">Topic-Board</string>
    <string name="supervisor_image">Supervisor-Image</string>
    <string name="study_fields_label">Study fields</string>
    <string name="upload_data">upload data</string>
    <string name="supervisor_languages_string_placeholder">Languages: %s</string>
    <string name="show_all">Show all</string>
    <string name="expose_string_placeholder">Exposé: %s</string>
    <string name="primary_supervisor_name_string_placeholder">1st Supervisor: %s</string>
    <string name="secondary_supervisor_name_string_placeholder">2nd Supervisor: %s</string>
    <string name="thesis_details_label">Thesis details</string>
    <string name="thesis_details_delete">Delete Thesis</string>
    <string name="thesis_submitted_text">Your supervisor will contact you via email. \n \n If you have any questions, please contact your supervisor. A response will be given within 48 hours.</string>
    <string name="thesis_submitted_label">Your Thesis</string>
    <string name="topic_tender_submit">Tender topic</string>
    <string name="missing_topic_title_message">Please enter a valid title for the topic</string>
    <string name="empty">[empty]</string>
    <string name="topic_created_message">New topic created</string>
    <string name="supervisor_details_label">Supervisor details</string>
    <string name="tender_topic_label">Topic announcement</string>
    <string name="select_second_supervisor">2nd Supervisors</string>
    <string name="set_second_supervisor">Select as second supervisor</string>
    <string name="topic_tender_label">Tender new topic →</string>
    <string name="topic_tender_text_label">Topic</string>
    <string name="thesis_overview_label">Supervision overview</string>
    <string name="thesis_state_string_placeholder">State: %s</string>
    <string name="thesis_billing_string_placeholder">Billing: %s</string>
    <string name="thesis_overview_supervision_label">Supervision: </string>
    <string name="thesis_overview_state_label">State: </string>
    <string name="thesis_overview_billing_label">Billing: </string>
    <string name="thesis_overview_supervision_primary_label">Primary</string>
    <string name="thesis_overview_supervision_secondary_label">Secondary</string>
    <string name="expose_download_message">Expose successfully downloaded and saved to downloads folder</string>
    <string name="no_expose_saved">No expose saved</string>
    <string name="missing_thesis_title_message">Thesis title can´t be empty</string>
    <string name="missing_expose_message">Please upload  an expose to submit</string>
    <string name="thesis_request_submitted">Thesis request submitted</string>
    <string name="no_pdf_selected">No PDF selected</string>

    <string name="thesis_state_open">Open</string>
    <string name="thesis_state_consultation">Consultation</string>
    <string name="thesis_state_registered">Registered</string>
    <string name="thesis_state_submitted">Submitted</string>
    <string name="thesis_state_colloquium">Colloquium</string>
    <string name="thesis_state_completed">Completed</string>
    <string name="thesis_state_canceled">Canceled</string>

    <string name="billing_state_open">Open</string>
    <string name="billing_state_billed">Billed</string>
    <string name="billing_state_settled">Settled</string>

    <string name="language_german">German</string>
    <string name="language_english">English</string>

    <string name="studyfield_engineeringsciences">Engineering Sciences</string>
    <string name="studyfield_planning_controlling">Planning &amp; Controlling</string>
    <string name="studyfield_datascience_ai">Data science &amp; Artificial Intelligence</string>
    <string name="studyfield_design_media">Design &amp; Media</string>
    <string name="studyfield_business_management">Business administration &amp; Management</string>
    <string name="studyfield_personell_law">Personnel &amp; Law</string>
    <string name="studyfield_architecture">Architecture</string>
    <string name="studyfield_computersciences_softwaredevelopment">Computer sciences &amp; Software Development</string>
    <string name="studyfield_marketing_communication">Marketing &amp; Communication</string>
    <string name="studyfield_projectmanagement">Projectmanagement</string>

    <string name="studyprogram_computerscience">Computer Science</string>
    <string name="studyprogram_history">History</string>
    <string name="studyprogram_mathematics">Mathematics</string>
    <string name="studyprogram_architecture">Architecture</string>
    <string name="studyprogram_marketing">Marketing</string>
    <string name="studyprogram_psychology">Psychology</string>
</resources>