<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/option_state_open"
        android:title="@string/thesis_state_open" />
    <item
        android:id="@+id/option_state_consultation"
        android:title="@string/thesis_state_consultation" />
    <item
        android:id="@+id/option_state_registered"
        android:title="@string/thesis_state_registered" />

    <item
        android:id="@+id/option_state_submitted"
        android:title="@string/thesis_state_submitted" />

    <item
        android:id="@+id/option_state_colloquium"
        android:title="@string/thesis_state_colloquium" />

    <item
        android:id="@+id/option_state_completed"
        android:title="@string/thesis_state_completed" />
    <item
        android:id="@+id/option_state_canceled"
        android:title="@string/thesis_state_canceled" />

</menu>