<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menuItem_filter"
        android:contentDescription="@string/filter"
        android:icon="@drawable/ic_filter"
        android:title="@string/filter"
        app:showAsAction="always">
        <menu>
            <item
                android:id="@+id/menuItem_showAll"
                android:contentDescription="@string/filter"
                android:title="@string/show_all"/>
            <!--- empty submenu, filled programmatically -->
        </menu>
    </item>

    <item
        android:id="@+id/menuItem_logout"
        android:contentDescription="@string/logout_content_description"
        android:icon="@drawable/ic_logout"
        android:title="@string/logout"
        app:showAsAction="always" />
</menu>