<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/toolbarLayoutConstraintLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/iuToolbar"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:background="@color/black"
        android:minHeight="?attr/actionBarSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/iuLogoImageView"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="20dp"
        android:scaleType="centerInside"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/iuToolbar"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/iu_logo" />

    <TextView
        android:id="@+id/iuTitleTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="70dp"
        android:fontFamily="@font/opensans_regular"
        android:text="@string/iu_name"
        android:textAllCaps="true"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/iuToolbar"
        app:layout_constraintStart_toEndOf="@+id/iuLogoImageView"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/menuItem_logout"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="10dp"
        android:contentDescription="@string/logout_content_description"
        android:scaleType="centerCrop"
        android:title="@string/logout"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/iuToolbar"
        app:layout_constraintStart_toEndOf="@+id/iuTitleTextView"
        app:layout_constraintTop_toTopOf="parent"
        app:showAsAction="ifRoom"
        app:srcCompat="@drawable/ic_logout" />

</androidx.constraintlayout.widget.ConstraintLayout>